Fixed off-center animation

--- a/src/components/LoadingAnimation.scss
+++ b/src/components/LoadingAnimation.scss
@@ -17,16 +17,11 @@ $delay: 0.75;
 }
 
 // reset
-.parent {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
 
 .artboard {
   @include flex();
   width: 100%;
-  height: 100%;
+  height: 92vh;
   position: absolute;
 }
 
@@ -34,26 +29,6 @@ $delay: 0.75;
   height: 100px;
   width: 100px;
 }
-
-// .domino > div {
-//   width: 50px;
-//   height: 50px;
-//   border-radius: 8px;
-//   display: inline-flex;
-//   @each $current-color in $colorArray {
-//     $i: index($colorArray, $current-color);
-//     animation: domino-effect 2.4s infinite ease-in-out;
-//     &:nth-child(#{$i}) {
-//       background: $current-color;
-//     }
-//   }
-//   @for $i from 1 through $n {
-//     &:nth-child(#{$i}) {
-//       margin: 25px;
-//       animation-delay: #{0.6 * $i}s;
-//     }
-//   }
-// }
 
 .domino-1 {
   @include square;
